[package]
name = "sign-in-with-apple"
version = "0.3.2"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "Sign In With Apple Validation in Async Rust"
edition = "2021"
homepage = "https://github.com/gameroasters/sign-in-with-apple"
repository = "https://github.com/gameroasters/sign-in-with-apple"
readme = "README.md"
license = "MIT"
categories = ["web-programming","asynchronous"]
keywords = [
    "apple",
    "mobile",
    "jwt",
    "signin",
    "validation",
]

[dependencies]
jsonwebtoken = "9.1.0"
serde = {version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
hyper = { version = "0.14.27", features = ["http1"] }
hyper-tls = "0.5"
tokio = { version = "1.33", features = ["rt-multi-thread", "net", "macros"] }
thiserror = "1.0.50"
